--- a/src/components/DisplayBackground/DisplayBackground.scss
+++ b/src/components/DisplayBackground/DisplayBackground.scss
@@ -55,3 +55,9 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .DisplayBackground {
+        transform-origin: bottom center;
+    }
+}
