--- a/src/components/IntroSection/IntroSection.scss
+++ b/src/components/IntroSection/IntroSection.scss
@@ -3,4 +3,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    p {
+        margin: 0;
+        text-align: justify;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .IntroSection {
+        padding-left: 24px;
+        padding-bottom: 73%;
+    }
 }
